syntax = "proto3";
package server;

message Nil {

}

message Key {
    string key = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message OprationResult {
    string activeIp = 4;
}

message Result {
    string value = 1;
    bool missCache = 2;
    string activeIp = 4;
}

message Data {
    string fromIp = 1;
    int32 fromPort = 2;
    bool distribute = 3;
}

message DistKeyValue {
    string key = 1;
    string value = 2;
    Data data = 3; 
}



service CacheService {
    rpc Get(Key) returns (Result) {}
    rpc Put(KeyValue) returns (OprationResult) {}
    rpc Clear(Nil) returns (OprationResult) {}

    rpc Use(DistKeyValue) returns (Nil) {}
    rpc ClearDist(Data) returns (Nil) {}
    rpc Check(Nil) returns (Nil) {}
    rpc ImAlive(Data) returns (Nil) {}
}

